Closed Bug 246112 Opened 22 years ago Closed 21 years ago

"Document: Done" is meaningless and should be removed

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.9

People

(Reporter: timeless, Assigned: jaas)

Details

Attachments

(1 file, 3 obsolete files)

1. Build Camino or download Camino 2. Run Camino 3. Cmd-B 4. Stare at "Document: Done" at the bottom of the window Expected results: Don't show Document: Done at all, it doesn't mean anything useful. Actual results: "Document: Done" in the bottom left corner of the window.
Summary: Status line has → Status line has "Document: Done" and the camino droplet
this is a mozilla artifact. i guess we could remove it.
Summary: Status line has "Document: Done" and the camino droplet → "Document: Done" is meaningless and should be removed
Target Milestone: --- → Camino1.0
i actually have a patch for this, but it's my first real .mm patch, so feel free to write your own.
If you have a patch please just post it.
Assignee: pinkerton → timeless
Status: NEW → ASSIGNED
Attached file nib change (obsolete) —
Comment on attachment 150538 [details] [diff] [review] Hide statusbar while showing bookmarks; add show/hide statusbar item Safari parity Sorry about the borked RCS file lines, that's from a script I used, it's fixed elsewhere I'll try to get it consistently fixed so that I stop sending bogus lines. perl -pi -e 's{/cvsroot//}{/}g' patchfile should fix it -- This is my first real mm change, and my first use of IB... -- The dimensions for the bookmarks manager don't seem to be quit right, i'd want it to be slightly taller, i'm not sure why they're wrong or how to fix that.
Attachment #150538 - Flags: review?(camino)
Attachment #150538 - Flags: review?(camino)
The part of your patch that allows hiding and showing of the status bar belongs to Bug 159233, so our paperwork is ok. So what you are doing is just hiding the status bar when in BM mode, sounds like a plan to me. Guys what do you think. (sorry I'm not a coder so I can't revew the actual patch)
Attachment #150538 - Flags: review?(josha)
Comment on attachment 150538 [details] [diff] [review] Hide statusbar while showing bookmarks; add show/hide statusbar item Safari parity Whether or not this patch works, it'll need to be updated for review as it is out of date (the nib file for sure).
Attachment #150538 - Flags: review?(joshmoz) → review-
No longer blocks: 159233
This looks like a one line change to Localizable.strings -"DocumentDone" = "Document: Done"; +"DocumentDone" = "";
lernean.hydra@gmail.com: the issue isn't that "document: done" is globally meaningless, the issue is that it's meaningless when the window you're starting at is *bookmarks* and not something resembling a document.
It is globally meaningless because blank tells you that nothing is going on just as much and is easier to tell apart from having loading information. Safari uses blank. But I noticed the right fix is really to change mLoadingStatusString = [NSLocalizedString(@"DocumentDone", @"") retain]; in BrowserWrapper.mm and take away the Localizeable.strings line.
Assignee: timeless → armen52
Status: ASSIGNED → NEW
I want this on 0.9 for now. Its quite bad for our UI.
Flags: camino0.9+
Target Milestone: Camino1.0 → Camino0.9
Attached patch patch v1.0 (obsolete) — Splinter Review
The patch posted by timeless belongs in another bug, as noted earlier in this bug by jasper. Here is the real fix.
Attachment #150538 - Attachment is obsolete: true
Attachment #150539 - Attachment is obsolete: true
Attachment #185728 - Flags: superreview?(sfraser_bugs)
Attachment #185728 - Flags: review?(armen52)
Assignee: armen52 → joshmoz
Status: NEW → ASSIGNED
Attachment #185729 - Flags: superreview?(sfraser_bugs)
Attachment #185729 - Flags: review?(armen52)
Attachment #185728 - Flags: superreview?(sfraser_bugs) → superreview+
Attachment #185729 - Flags: superreview?(sfraser_bugs) → superreview+
Attachment #185728 - Flags: review?(armen52)
Attachment #185729 - Flags: review?(armen52)
The patch is actually bad - even the empty string should be retained.
Attachment #185728 - Attachment is obsolete: true
Attachment #185728 - Flags: review-
Landed on trunk with empty string retained.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: