Get rid of "Document: Done" from status bar. b=246112 r=josh sr=smfr